# 8006-asn3

./: .gitignore  CMakeLists.txt  README.md  ids.service
src/: common.h  epoll.c  epoll.h  format_data.py  inotify.c  inotify.h  iptables.c  iptables.h  main.c  subshell.c  subshell.h  ui.c  ui.h
